[package]
name = "cocklistener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
serde = "1"
serde_json = "1"
actix-multipart = "0.4.0"
qstring = "0.7.2"
futures = "0.3.21"
actix-files = "0.5.0"